<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity" >

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="50dp"

        android:src="@drawable/logo_nytrigid"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="@string/reg"
        android:textSize="25sp"
        android:textColor="@color/black"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2" />

    <EditText
        android:id="@+id/loginInputRegistration"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"

        android:hint="@string/login"
        android:textSize="25sp"
        android:background="@color/green"

        app:layout_constraintTop_toBottomOf="@+id/registrationText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/passwordInputRegistration"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"

        android:hint="@string/passwordText"
        android:textSize="25sp"
        android:background="@color/green"

        app:layout_constraintTop_toBottomOf="@+id/loginInputRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/nameInputRegistration"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"

        android:hint="@string/name"
        android:textSize="25sp"
        android:background="@color/green"

        app:layout_constraintTop_toBottomOf="@+id/passwordInputRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:id="@+id/surnameInputRegistration"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"

        android:hint="@string/surname"
        android:textSize="25sp"
        android:background="@color/green"

        app:layout_constraintTop_toBottomOf="@+id/nameInputRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageNext1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"

        android:src="@drawable/baseline_navigate_next_24"
        android:onClick="RegistrationNextPage2"

        app:layout_constraintRight_toRightOf="@id/surnameInputRegistration"
        app:layout_constraintTop_toBottomOf="@+id/surnameInputRegistration" />

    <TextView
        android:id="@+id/enterProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:text="@string/enterProfile"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:onClick="Autorization"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>