<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="70dp"

        android:src="@drawable/logo_nytrigid"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/avtorizationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="@string/author"
        android:textSize="30sp"
        android:textColor="@color/black"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo1" />

    <EditText
        android:id="@+id/loginInputAutorization"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"

        android:hint="@string/login"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="@color/green"

        app:layout_constraintTop_toBottomOf="@+id/avtorizationText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/passwordInputAutorization"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"

        android:hint="@string/passwordText"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="@color/green"

        app:layout_constraintTop_toBottomOf="@+id/loginInputAutorization"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/enterProfileAutorization"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:backgroundTint="@color/blue"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="@color/black"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputAutorization" />

    <TextView
        android:id="@+id/createProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:text="@string/createProfile"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:onClick="Registration"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterProfileAutorization" />

</androidx.constraintlayout.widget.ConstraintLayout>