<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.RefactorYourProfile">

    <ImageView
        android:id="@+id/imageBackRefInf"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"

        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:onClick="RefBack1"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/refactorProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="@string/refactorProfileText"
        android:textSize="20sp"
        android:textColor="@color/black"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/loginRefactorProfile"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refactorProfile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"

            android:text="@string/loginUserProfileText"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/refactorLoginEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:hint="axiony"
            android:textColorHint="@color/orange"
            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nameRefactorProfile"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginRefactorProfile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"

            android:text="@string/nameUserProfileText"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/refactorNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:hint="Aksinya"
            android:textColorHint="@color/orange"
            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/birthdayRefactorProfile"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRefactorProfile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"

            android:text="@string/birthdayUserProfileText"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/refactorBirthdayEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:hint="06.02"
            android:textColorHint="@color/orange"
            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heightRefactorProfile"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayRefactorProfile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"

            android:text="@string/heightRefactorText"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/refactorHeightEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:hint="167"
            android:textColorHint="@color/orange"
            android:textSize="20sp"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/refactorProfilePasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/refactorPasswordText"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightRefactorProfile"/>

    <EditText
        android:id="@+id/passwordRefactorNow"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"

        android:hint="@string/passwordText"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:background="@color/green"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refactorProfilePasswordText"/>

    <EditText
        android:id="@+id/passwordRefactorNext"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"

        android:hint="@string/passwordNextText"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:background="@color/green"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRefactorNow"/>

    <Button
        android:id="@+id/applyRefactorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/saveRefactorText"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:backgroundTint="@color/blue"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRefactorNext"/>

</androidx.constraintlayout.widget.ConstraintLayout>