<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diary.DiaryFragment">

    <TextView
        android:id="@+id/makingMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"

        android:text="@string/makingMealsText"
        android:textSize="20sp"
        android:textColor="@color/black"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/waterAdding"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"

        android:text="@string/waterString"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makingMeals" />


    <RelativeLayout
        android:id="@+id/breakfastAdding"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/green"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterAdding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"

            android:text="@string/breakfastString"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_add_24" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lunchAdding"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@color/green"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfastAdding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"

            android:text="@string/lunchString"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_add_24" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dinnerAdding"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@color/green"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lunchAdding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"

            android:text="@string/dinnerString"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_add_24" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/snackAdding"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@color/green"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinnerAdding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"

            android:text="@string/snackString"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_add_24" />
    </RelativeLayout>

    <Button
        android:id="@+id/activityAdding"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        android:text="@string/acrivityString"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/orange"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snackAdding" />

</androidx.constraintlayout.widget.ConstraintLayout>